revised docker file

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,6 @@
-# 多阶段构建Dockerfile - uni-load-improved all-in-one部署
-# 支持多架构: linux/amd64, linux/arm64
+# 多阶段构建Dockerfile - uni-load-improved
+# 仅构建uni-load-improved后端和前端
+# gpt-load和uni-api使用官方Docker镜像独立部署
 
 # ============ 阶段1: 构建前端 ============
 FROM node:20-alpine AS frontend-builder
@@ -36,30 +37,12 @@ COPY backend/requirements.txt ./
 # 安装Python依赖到用户目录
 RUN pip install --no-cache-dir --user -r requirements.txt
 
-# ============ 阶段3: gpt-load集成 ============
-FROM python:3.11-slim AS gptload-builder
-
-WORKDIR /gptload
-
-# 安装gpt-load（如果有pip包的话）
-# 注意：这里假设gpt-load可以通过pip安装或从源码构建
-# 如果gpt-load有官方Docker镜像，可以直接使用COPY --from
-RUN pip install --no-cache-dir --user gpt-load || echo "gpt-load not available via pip"
-
-# ============ 阶段4: uni-api集成 ============
-FROM python:3.11-slim AS uniapi-builder
-
-WORKDIR /uniapi
-
-# 安装uni-api
-RUN pip install --no-cache-dir --user uni-api || echo "uni-api not available via pip"
-
-# ============ 阶段5: 最终运行时镜像 ============
+# ============ 阶段3: 最终运行时镜像 ============
 FROM python:3.11-slim
 
 # 设置标签
 LABEL maintainer="uni-load-improved"
-LABEL description="All-in-one container for uni-load-improved with gpt-load and uni-api"
+LABEL description="uni-load-improved - Configuration management for gpt-load and uni-api"
 LABEL version="1.0.0"
 
 WORKDIR /app
@@ -68,13 +51,10 @@ WORKDIR /app
 RUN apt-get update && apt-get install -y \
     curl \
     ca-certificates \
-    supervisor \
     && rm -rf /var/lib/apt/lists/*
 
 # 从构建阶段复制Python包
 COPY --from=backend-builder /root/.local /root/.local
-COPY --from=gptload-builder /root/.local /root/.local
-COPY --from=uniapi-builder /root/.local /root/.local
 
 # 设置PATH
 ENV PATH=/root/.local/bin:$PATH
@@ -95,7 +75,6 @@ RUN mkdir -p /app/config /app/data /app/logs /app/backups
 # 复制Docker相关脚本
 COPY docker/entrypoint.sh /entrypoint.sh
 COPY docker/healthcheck.sh /healthcheck.sh
-COPY docker/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 # 设置脚本权限
 RUN chmod +x /entrypoint.sh /healthcheck.sh
@@ -107,8 +86,8 @@ RUN useradd -m -u 1000 -s /bin/bash uniload && \
 # 切换到非root用户
 USER uniload
 
-# 暴露端口
-EXPOSE 8080 3001 8000
+# 暴露端口（仅uni-load-improved后端）
+EXPOSE 8080
 
 # 健康检查
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
@@ -120,8 +99,8 @@ ENV PYTHONUNBUFFERED=1 \
     UNI_LOAD_CONFIG=/app/config/user-config.yaml \
     UNI_LOAD_DATA=/app/data \
     UNI_LOAD_LOGS=/app/logs \
-    GPT_LOAD_MODE=internal \
-    UNI_API_MODE=internal \
+    GPT_LOAD_URL=http://gpt-load:3001 \
+    UNI_API_URL=http://uni-api:8000 \
     LOG_LEVEL=INFO
 
 # 数据卷
