revised docker file again

--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -10,7 +10,9 @@ WORKDIR /app
 COPY frontend/package*.json ./
 
 # 安装依赖
-RUN npm ci
+# 注意：使用 npm install 而不是 npm ci，因为项目中没有 package-lock.json
+# 如果需要更严格的依赖版本控制，建议生成 package-lock.json 并使用 npm ci
+RUN npm install
 
 # 复制前端源码
 COPY frontend/ ./
