--- a/docker/Dockerfile.frontend
+++ b/docker/Dockerfile.frontend
@@ -29,7 +29,8 @@ LABEL description="Frontend service for uni-load-improved"
 LABEL version="1.0.0"
 
 # 复制构建产物到nginx目录
-COPY --from=builder /app/dist /usr/share/nginx/html
+# 注意：vite.config.js配置输出到../backend/static，所以实际路径是/app/backend/static
+COPY --from=builder /app/backend/static /usr/share/nginx/html
 
 # 复制nginx配置
 COPY docker/nginx.conf /etc/nginx/conf.d/default.conf
